# prltc

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md  ROADMAP.md  SECURITY.md  TEST_EXEC_TIME.md  build.rs  install.sh  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
Formula/: rtk.rb
claudedocs/: audit-feature-summary.md  cc-economics-implementation.md  refactoring-report.md
docs/: AUDIT_GUIDE.md  FEATURES.md  TECHNICAL.md  TROUBLESHOOTING.md  filter-workflow.md  tracking.md
hooks/: README.md  cline-rtk-rules.md  copilot-rtk-awareness.md  opencode-rtk.ts  rtk-awareness-codex.md  rtk-rewrite.sh  test-copilot-rtk-rewrite.sh  test-rtk-rewrite.sh  windsurf-rtk-rules.md
openclaw/: README.md  index.ts  openclaw.plugin.json  package.json
scripts/: benchmark.sh  check-installation.sh  check-test-presence.sh  install-local.sh  rtk-economics.sh  test-all.sh  test-aristote.sh  test-ruby.sh  test-tracking.sh  validate-docs.sh
src/: aws_cmd.rs  binlog.rs  cargo_cmd.rs  cc_economics.rs  ccusage.rs  config.rs  container.rs  curl_cmd.rs  deps.rs  diff_cmd.rs  display_helpers.rs  dotnet_cmd.rs  dotnet_format_report.rs  dotnet_trx.rs  env_cmd.rs  filter.rs  find_cmd.rs  format_cmd.rs  gain.rs  gh_cmd.rs  git.rs  go_cmd.rs  golangci_cmd.rs  grep_cmd.rs  gt_cmd.rs  hook_audit_cmd.rs  hook_check.rs  hook_cmd.rs  init.rs  integrity.rs  json_cmd.rs  lint_cmd.rs  local_llm.rs  log_cmd.rs  ls.rs  main.rs  (+32 more)
(+164 files in other folders)
